// Vitest Snapshot v1

exports[`dts > components only 1`] = `
"// generated by unplugin-vue-components
// We suggest you to commit this file into source control
// Read more: https://github.com/vuejs/core/pull/3399
import '@vue/runtime-core'

export {}

declare module '@vue/runtime-core' {
  export interface GlobalComponents {
    RouterLink: typeof import('vue-router')['RouterLink']
    RouterView: typeof import('vue-router')['RouterView']
    TestComp: typeof import('test/component/TestComp')['default']
  }
}
"
`;

exports[`dts > directive only 1`] = `
"// generated by unplugin-vue-components
// We suggest you to commit this file into source control
// Read more: https://github.com/vuejs/core/pull/3399
import '@vue/runtime-core'

export {}

declare module '@vue/runtime-core' {
  export interface ComponentCustomProperties {
    vLoading: typeof import('test/directive/Loading')['default']
  }
}
"
`;

exports[`dts > getDeclaration 1`] = `
"// generated by unplugin-vue-components
// We suggest you to commit this file into source control
// Read more: https://github.com/vuejs/core/pull/3399
import '@vue/runtime-core'

export {}

declare module '@vue/runtime-core' {
  export interface GlobalComponents {
    RouterLink: typeof import('vue-router')['RouterLink']
    RouterView: typeof import('vue-router')['RouterView']
    TestComp: typeof import('test/component/TestComp')['default']
  }
  export interface ComponentCustomProperties {
    vLoading: typeof import('test/directive/Loading')['default']
  }
}
"
`;

exports[`dts > getDeclaration and transform 1`] = `
"// generated by unplugin-vue-components
// We suggest you to commit this file into source control
// Read more: https://github.com/vuejs/core/pull/3399
import '@vue/runtime-core'

export {}

declare module '@vue/runtime-core' {
  export interface GlobalComponents {
    RouterLink: typeof import('vue-router')['RouterLink']
    RouterView: typeof import('vue-router')['RouterView']
    TestComp: typeof import('test/component/TestComp')['default']
  }
  export interface ComponentCustomProperties {
    vLoading: typeof import('test/directive/Loading')['default']
  }
}
"
`;

exports[`dts > parseDeclaration - has icon component like <IMdi:diceD12> 1`] = `
{
  "component": {
    "ComponentA": "typeof import('./src/components/ComponentA.vue')['default']",
    "IMdi:diceD12": "typeof import('~icons/mdi/dice-d12')['default']",
    "IMdiLightAlarm": "typeof import('~icons/mdi-light/alarm')['default']",
  },
  "directive": {},
}
`;

exports[`dts > parseDeclaration - with directives 1`] = `
{
  "component": {
    "ComponentA": "typeof import('./src/components/ComponentA.vue')['default']",
    "IMdi:diceD12": "typeof import('~icons/mdi/dice-d12')['default']",
    "IMdiLightAlarm": "typeof import('~icons/mdi-light/alarm')['default']",
  },
  "directive": {
    "vDirective": "typeof import('foo')",
    "vLoading": "typeof import('test/directive/Loading')['default']",
    "vSome": "typeof import('test/directive/Some')['default']",
  },
}
`;

exports[`dts > parseDeclaration 1`] = `
{
  "component": {
    "ComponentA": "typeof import('./src/components/ComponentA.vue')['default']",
    "ComponentB": "typeof import('./src/components/ComponentB.vue')['default']",
    "ComponentC": "typeof import('./src/components/component-c.vue')['default']",
  },
  "directive": {},
}
`;

exports[`dts > writeDeclaration - keep unused 1`] = `
"// generated by unplugin-vue-components
// We suggest you to commit this file into source control
// Read more: https://github.com/vuejs/core/pull/3399
import '@vue/runtime-core'

export {}

declare module '@vue/runtime-core' {
  export interface GlobalComponents {
    RouterLink: typeof import('vue-router')['RouterLink']
    RouterView: typeof import('vue-router')['RouterView']
    SomeComp: typeof import('test/component/SomeComp')['default']
    TestComp: typeof import('test/component/TestComp')['default']
  }
  export interface ComponentCustomProperties {
    vDirective: typeof import('foo')
    vLoading: typeof import('test/directive/Loading')['default']
    vSome: typeof import('test/directive/Some')['default']
  }
}
"
`;

exports[`dts > writeDeclaration 1`] = `
"// generated by unplugin-vue-components
// We suggest you to commit this file into source control
// Read more: https://github.com/vuejs/core/pull/3399
import '@vue/runtime-core'

export {}

declare module '@vue/runtime-core' {
  export interface GlobalComponents {
    RouterLink: typeof import('vue-router')['RouterLink']
    RouterView: typeof import('vue-router')['RouterView']
    TestComp: typeof import('test/component/TestComp')['default']
  }
  export interface ComponentCustomProperties {
    vLoading: typeof import('test/directive/Loading')['default']
  }
}
"
`;
